# Dfunge

./: CMakeLists.txt  README.md
examples/: calculator.dfng  cat.dfng  factorial.dfng  guessingGame.dfng  helloDfunge.dfng  helloFile.dfng  helloWorld.dfng  iterateDirectories.dfng  loop.dfng  rockPaperScissors.dfng
include/: file.hpp  format.hpp  interpreter.hpp  tokens.hpp
src/: commands.cpp  file.cpp  functions.cpp  interpreter.cpp  main.cpp
